<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_FactoryIO" Id="{a4883462-1cb0-43b2-bb87-d6ce56b75e06}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
//	GAB_FactoryIO_Inputs : ARRAY [0..1] OF WORD;
//	GAB_FactoryIO_InputRegs : ARRAY [0..7] OF INT;
//	GAB_FactoryIO_Outputs : ARRAY [0..1] OF WORD;
//	GAB_FactoryIO_OutputsRegs : ARRAY [0..7] OF INT;
	
	bInput1: ARRAY [0..15] OF BOOL;
	bInput2: ARRAY [0..15] OF BOOL;
	nInputReg: ARRAY [0..7] OF INT;
	bOutput1: ARRAY [0..15] OF BOOL;
	bOutput2: ARRAY [0..15] OF BOOL;
	nOutputReg: ARRAY [0..7] OF INT;
	
	test: INT;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>