<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="FB_FactoryIO_ModbusTCP_Read" Id="{ef99659b-bb0e-494d-8cf7-6072e7c46a5c}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK PUBLIC FB_FactoryIO_ModbusTCP_Read
VAR_INPUT
	// **** Configuration en fonction de la configuration FactoryIO
	sIPAddr : STRING[15]:='127.0.0.1'; // '127.0.0.1'
	nTCPPort : UINT:=505; // 505
	nUnitID : BYTE:=255; // 255	
END_VAR

VAR_OUTPUT
	bBusy: BOOL;
	bError: BOOL;
	// *** Configuration des array en fonction de la configuration FactoryIO
	InputReg : ARRAY [0..7] OF INT; // ex. input register 8 [0..7] pour les mesures analogiques
	// Inputs traités
	bInput1 : ARRAY [0..15] OF BOOL;
	bInput2 : ARRAY [0..15] OF BOOL;
	
END_VAR
	
VAR
	// Instances
	fb_MBReadInputs : FB_MBReadInputs; // Instance de la fonction FB_MBReadInputs de la lib Tc2_ModbusSrv
	fb_MBReadInputRegs : FB_MBReadInputRegs;
	
	fb_Word_To_Bool : FB_Word_To_Bool; // Instance commune
	fb_Bool_To_Word: FB_Bool_To_Word ; // Instance commune
	
	// *** Configuration des array en fonction de la configuration FactoryIO
	Input : ARRAY [0..1] OF WORD; // ex. input digital 16 [0..0] /  input digital 32 [0..1]
	
	// Busy Error interne à la fonciton
	bBusyInput: ARRAY [1..2] OF BOOL;
	bErrorInput: ARRAY [1..2] OF BOOL;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Traitement des bool représentant les inputs
fb_Word_To_Bool(inWord := Input[0],
				outArrayOfBool => bInput1);
fb_Word_To_Bool(inWord := Input[1],
				outArrayOfBool => bInput2);
				
			

// Busy si au moins 1 busy
IF bBusyInput[1] OR bBusyInput[2] THEN
	bBusy := 1;
ELSE
	bBusy := 0;
END_IF

// Error si au moins 1 busy
IF bErrorInput[1] OR bErrorInput[2] THEN
	bError := 1;
ELSE
	bError := 0;
END_IF

]]></ST>
    </Implementation>
    <Method Name="MappingInput" Id="{cdba02c1-7fcc-49d0-8394-7d19715afbb4}">
      <Declaration><![CDATA[METHOD MappingInput
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Exercice 1
E_BoutonMarche := FIO_Input1[0];
E_Capteur := FIO_Input1[1];
E_BoutonAvancer := FIO_Input1[2];]]></ST>
      </Implementation>
    </Method>
    <Method Name="ReadInput" Id="{114b7d6d-1641-41a1-9a37-c80540c5b291}">
      <Declaration><![CDATA[METHOD PUBLIC ReadInput
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fb_MBReadInputs(
	sIPAddr := sIPAddr,
	nTCPPort := nTCPPort,
	nUnitID := nUnitID,
	nQuantity := SIZEOF(Input)*8, // Nombre de bits à lire SIZEOF(nb byte * bits dans 1 byte)
	nMBAddr := 0,
	cbLength := SIZEOF(Input),
	pDestAddr := ADR(Input),
	bExecute := TRUE,
	tTimeout := T#1S,
	bBusy => bBusyInput[1],
	bError => bErrorInput[1],
	nErrId => ,
	cbRead => ,
 );
fb_MBReadInputs(bExecute := FALSE);

]]></ST>
      </Implementation>
    </Method>
    <Method Name="ReadInputRegister" Id="{49627f2a-4539-4976-b388-686bcf311a5b}">
      <Declaration><![CDATA[METHOD PUBLIC ReadInputRegister
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fb_MBReadInputRegs(
	sIPAddr := sIPAddr,
	nTCPPort := nTCPPort,
	nUnitID := nUnitID,
	nQuantity := SIZEOF(InputReg)/2,
	nMBAddr := 0,
	cbLength := SIZEOF(InputReg),
	pDestAddr := ADR(InputReg),
	bExecute := TRUE,
	tTimeout := T#1S,
	bBusy => bBusyInput[2],
	bError => bErrorInput[2],
	nErrId => ,
	cbRead => ,
 );
fb_MBReadInputRegs(bExecute := FALSE);]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_FactoryIO_ModbusTCP_Read">
      <LineId Id="123" Count="0" />
      <LineId Id="110" Count="0" />
      <LineId Id="115" Count="0" />
      <LineId Id="122" Count="0" />
      <LineId Id="114" Count="0" />
      <LineId Id="152" Count="0" />
      <LineId Id="155" Count="0" />
      <LineId Id="124" Count="0" />
      <LineId Id="78" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="79" Count="0" />
      <LineId Id="81" Count="1" />
      <LineId Id="80" Count="0" />
      <LineId Id="125" Count="0" />
      <LineId Id="85" Count="4" />
      <LineId Id="84" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="68" Count="0" />
    </LineIds>
    <LineIds Name="FB_FactoryIO_ModbusTCP_Read.MappingInput">
      <LineId Id="6" Count="2" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_FactoryIO_ModbusTCP_Read.ReadInput">
      <LineId Id="53" Count="15" />
      <LineId Id="48" Count="0" />
      <LineId Id="46" Count="0" />
    </LineIds>
    <LineIds Name="FB_FactoryIO_ModbusTCP_Read.ReadInputRegister">
      <LineId Id="23" Count="14" />
      <LineId Id="22" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>