<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="PRG_FactoryIO_ModbusTCP_Read" Id="{e3a0b526-1f07-43ca-9585-e7d3202c3fc5}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_FactoryIO_ModbusTCP_Read
// Dépendance Tc2_ModbusSrv (TF6250-Modbus-TCP)
// FB_Bool_To_Word + FB_Word_To_Bool
VAR
	fb_FactoryIO_ModbusTCP_Read : FB_FactoryIO_ModbusTCP_Read;
END_VAR
]]></Declaration>
    <Implementation>
      <CFC>
        <XmlArchive>
          <Data>
            <o xml:space="preserve" t="CFCImplementationObject">
              <o n="Items" t="CFCItemList">
                <l2 n="InnerList">
                  <o t="CFCConnection">
                    <v n="Bounds">"0, 0, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">319L</v>
                    <v n="DestPinId">213L</v>
                    <v n="Id">321L</v>
                  </o>
                  <o t="CFCConnection">
                    <v n="Bounds">"0, 0, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">300L</v>
                    <v n="DestPinId">221L</v>
                    <v n="Id">313L</v>
                  </o>
                  <o t="CFCConnection">
                    <v n="Bounds">"0, 0, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">301L</v>
                    <v n="DestPinId">209L</v>
                    <v n="Id">314L</v>
                  </o>
                  <o t="CFCCommentElement">
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"READ ModbusTCP FactoryIO"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">38L</v>
                    </o>
                    <v n="PageArea">0</v>
                    <v n="Bounds">"4, 2, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">37L</v>
                  </o>
                  <o t="CFCBoxElement">
                    <o n="Inputs" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCInputPin">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">295L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">296L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">297L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Outputs" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCOutputPin">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">298L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">299L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">300L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">301L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">319L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Texts" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCText">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"sIPAddr"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">303L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"nTCPPort"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">304L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"nUnitID"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">305L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"bBusy"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">306L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"bError"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">307L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"InputReg"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">308L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"bInput1"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">309L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"bInput2"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">320L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"FB_FactoryIO_ModbusTCP_Read"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">311L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"fb_FactoryIO_ModbusTCP_Read"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">312L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Parameters" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <n n="PreparedParameters" />
                    <v n="PageArea">0</v>
                    <v n="Bounds">"3, 4, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="EnEno">false</v>
                    <v n="KindOfCall" t="KindOfCall">FunctionBlock</v>
                    <v n="ContainsExtensibleInputs">false</v>
                    <v n="Forced">false</v>
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">294L</v>
                  </o>
                  <o t="CFCBoxElement">
                    <o n="Inputs" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <o n="Outputs" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <o n="Texts" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCText">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"FB_FactoryIO_ModbusTCP_Read.ReadInput"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">317L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"fb_FactoryIO_ModbusTCP_Read"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">318L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Parameters" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <n n="PreparedParameters" />
                    <v n="PageArea">0</v>
                    <v n="Bounds">"13, 16, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="EnEno">false</v>
                    <v n="KindOfCall" t="KindOfCall">Method</v>
                    <v n="ContainsExtensibleInputs">false</v>
                    <v n="Forced">false</v>
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">316L</v>
                  </o>
                  <o t="CFCBoxElement">
                    <o n="Inputs" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <o n="Outputs" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <o n="Texts" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCText">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"FB_FactoryIO_ModbusTCP_Read.ReadInputRegister"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">202L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"fb_FactoryIO_ModbusTCP_Read"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">203L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Parameters" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <n n="PreparedParameters" />
                    <v n="PageArea">0</v>
                    <v n="Bounds">"32, 16, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="EnEno">false</v>
                    <v n="KindOfCall" t="KindOfCall">Method</v>
                    <v n="ContainsExtensibleInputs">false</v>
                    <v n="Forced">false</v>
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">201L</v>
                  </o>
                  <o t="CFCOutputElement">
                    <o n="Input" t="CFCInputPinWithSetReset">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="ProcessValue">""</v>
                      <v n="Access" t="ProcessValueAccess">None</v>
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">221L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"FIO_InputReg"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">222L</v>
                    </o>
                    <v n="PageArea">4</v>
                    <v n="Bounds">"33, 7, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">220L</v>
                  </o>
                  <o t="CFCOutputElement">
                    <o n="Input" t="CFCInputPinWithSetReset">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="ProcessValue">""</v>
                      <v n="Access" t="ProcessValueAccess">None</v>
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">209L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"FIO_Input1"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">210L</v>
                    </o>
                    <v n="PageArea">4</v>
                    <v n="Bounds">"34, 9, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">208L</v>
                  </o>
                  <o t="CFCOutputElement">
                    <o n="Input" t="CFCInputPinWithSetReset">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="ProcessValue">""</v>
                      <v n="Access" t="ProcessValueAccess">None</v>
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">213L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"FIO_Input2"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">214L</v>
                    </o>
                    <v n="PageArea">4</v>
                    <v n="Bounds">"34, 11, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">212L</v>
                  </o>
                  <o t="CFCBoxElement">
                    <o n="Inputs" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <o n="Outputs" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <o n="Texts" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCText">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"FB_FactoryIO_ModbusTCP_Read.MappingInput"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">282L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"fb_FactoryIO_ModbusTCP_Read"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">283L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Parameters" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <n n="PreparedParameters" />
                    <v n="PageArea">0</v>
                    <v n="Bounds">"43, 7, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="EnEno">false</v>
                    <v n="KindOfCall" t="KindOfCall">Method</v>
                    <v n="ContainsExtensibleInputs">false</v>
                    <v n="Forced">false</v>
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">281L</v>
                  </o>
                  <o t="CFCCommentElement">
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"Call method"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">177L</v>
                    </o>
                    <v n="PageArea">0</v>
                    <v n="Bounds">"16, 15, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">176L</v>
                  </o>
                </l2>
              </o>
              <n n="ParameterInitializationMethodGenerator" />
              <o n="RoutingPathTable" t="CFCRoutingPathTable">
                <d2 n="InnerDictionary" ckt="CFCRoutingConnection" cvt="CFCPointList">
                  <o>
                    <v n="ConnectionId">321L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">17</v>
                      <v n="Y">10</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">false</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">17</v>
                        <v n="Y">10</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">68</v>
                      </o>
                      <o>
                        <v n="X">25</v>
                        <v n="Y">10</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">9</v>
                      </o>
                      <o>
                        <v n="X">25</v>
                        <v n="Y">11</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">6</v>
                      </o>
                      <o>
                        <v n="X">33</v>
                        <v n="Y">11</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">97</v>
                      </o>
                    </l2>
                  </o>
                  <o>
                    <v n="ConnectionId">313L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">17</v>
                      <v n="Y">8</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">false</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">17</v>
                        <v n="Y">8</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">68</v>
                      </o>
                      <o>
                        <v n="X">24</v>
                        <v n="Y">8</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">3</v>
                      </o>
                      <o>
                        <v n="X">24</v>
                        <v n="Y">7</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">12</v>
                      </o>
                      <o>
                        <v n="X">32</v>
                        <v n="Y">7</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">97</v>
                      </o>
                    </l2>
                  </o>
                  <o>
                    <v n="ConnectionId">314L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">17</v>
                      <v n="Y">9</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">false</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">17</v>
                        <v n="Y">9</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">68</v>
                      </o>
                      <o>
                        <v n="X">33</v>
                        <v n="Y">9</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">97</v>
                      </o>
                    </l2>
                  </o>
                </d2>
              </o>
              <v n="AutoSizeCanvas">true</v>
              <v n="CanvasWidth">63</v>
              <v n="CanvasHeight">20</v>
            </o>
          </Data>
          <TypeList>
            <Type n="Boolean">System.Boolean</Type>
            <Type n="CFCBoxElement">{f5becf35-b1f3-4274-b411-81d4b63a1516}</Type>
            <Type n="CFCCommentElement">{3487d131-7fd4-48ac-9e99-9e275c3b8ff8}</Type>
            <Type n="CFCConnection">{5ae2e111-ecff-4a21-b647-2d4da63f8db7}</Type>
            <Type n="CFCImplementationObject">{32d3375e-c010-41e2-9e43-b2fbf4f2b374}</Type>
            <Type n="CFCInputPin">{c994f6e0-311a-4a1c-bc38-75fe34892406}</Type>
            <Type n="CFCInputPinWithSetReset">{5c3476a8-05c5-430e-861c-9cfa51d68ca8}</Type>
            <Type n="CFCItemList">{cd57ba20-558b-4b98-96c1-73c6000c3087}</Type>
            <Type n="CFCOutputElement">{8d9e2b78-3efe-4fe4-8160-f3a7381ddd8f}</Type>
            <Type n="CFCOutputPin">{65582d84-cf18-4ca0-be59-bf5a3d00b8f8}</Type>
            <Type n="CFCPoint">{b3e42b54-b8f2-45d3-825d-747f82f244a0}</Type>
            <Type n="CFCPointList">{584effbc-813e-443a-bf78-ad9c8d49db41}</Type>
            <Type n="CFCRoutingConnection">{93c117eb-0884-403b-b01e-28b89f47e041}</Type>
            <Type n="CFCRoutingPathTable">{4b8bcc79-5980-4868-b49e-005a8148859b}</Type>
            <Type n="CFCText">{72f2b13f-5349-4a8a-bbe6-2bccf3f42179}</Type>
            <Type n="Int32">System.Int32</Type>
            <Type n="Int64">System.Int64</Type>
            <Type n="KindOfCall">{77f43dfe-ca6a-4869-828f-7609d8ed6ea6}</Type>
            <Type n="ProcessValueAccess">{88453c7d-d652-4a27-a1b0-a1953be49a5c}</Type>
            <Type n="SetReset">{24449d48-c96a-49c4-b9d1-a4ea34aedce3}</Type>
            <Type n="SetResetRef">{233bc97c-69fe-4d29-b40e-a9a9b854044e}</Type>
            <Type n="String">System.String</Type>
          </TypeList>
        </XmlArchive>
      </CFC>
    </Implementation>
  </POU>
</TcPlcObject>