<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="PRG_FactoryIO_ModbusTCP_Write" Id="{86f813b4-6ada-4788-8afc-fe1c48f3163b}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_FactoryIO_ModbusTCP_Write
// Dépendance Tc2_ModbusSrv (TF6250-Modbus-TCP)
// FB_Bool_To_Word + FB_Word_To_Bool
VAR
	fb_FactoryIO_ModbusTCP : FB_FactoryIO_ModbusTCP;
	fb_MappingOutputs : FB_MappingOutputs;
END_VAR
]]></Declaration>
    <Implementation>
      <CFC>
        <XmlArchive>
          <Data>
            <o xml:space="preserve" t="CFCImplementationObject">
              <o n="Items" t="CFCItemList">
                <l2 n="InnerList">
                  <o t="CFCConnection">
                    <v n="Bounds">"0, 0, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">251L</v>
                    <v n="DestPinId">240L</v>
                    <v n="Id">253L</v>
                  </o>
                  <o t="CFCConnection">
                    <v n="Bounds">"0, 0, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">247L</v>
                    <v n="DestPinId">236L</v>
                    <v n="Id">249L</v>
                  </o>
                  <o t="CFCConnection">
                    <v n="Bounds">"0, 0, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">243L</v>
                    <v n="DestPinId">238L</v>
                    <v n="Id">245L</v>
                  </o>
                  <o t="CFCCommentElement">
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"WRITE ModbusTCP FactoryIO"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">38L</v>
                    </o>
                    <v n="PageArea">0</v>
                    <v n="Bounds">"30, 2, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">37L</v>
                  </o>
                  <o t="CFCInputElement">
                    <o n="Output" t="CFCOutputPin">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">247L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"FIO_OutputReg"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">248L</v>
                    </o>
                    <v n="PageArea">3</v>
                    <v n="Bounds">"16, 9, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">246L</v>
                  </o>
                  <o t="CFCInputElement">
                    <o n="Output" t="CFCOutputPin">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">243L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"FIO_Output1"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">244L</v>
                    </o>
                    <v n="PageArea">3</v>
                    <v n="Bounds">"16, 10, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">242L</v>
                  </o>
                  <o t="CFCInputElement">
                    <o n="Output" t="CFCOutputPin">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">251L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"FIO_Output2"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">252L</v>
                    </o>
                    <v n="PageArea">3</v>
                    <v n="Bounds">"16, 11, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">250L</v>
                  </o>
                  <o t="CFCBoxElement">
                    <o n="Inputs" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <o n="Outputs" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <o n="Texts" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCText">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"FB_MappingOutputs"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">261L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"fb_MappingOutputs"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">262L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Parameters" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <n n="PreparedParameters" />
                    <v n="PageArea">0</v>
                    <v n="Bounds">"6, 9, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="EnEno">false</v>
                    <v n="KindOfCall" t="KindOfCall">FunctionBlock</v>
                    <v n="ContainsExtensibleInputs">false</v>
                    <v n="Forced">false</v>
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">260L</v>
                  </o>
                  <o t="CFCBoxElement">
                    <o n="Inputs" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCInputPin">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">31L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">33L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">35L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">236L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">238L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">240L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Outputs" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCOutputPin">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">185L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">187L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">218L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">204L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">206L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Texts" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCText">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"sIPAddr"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">32L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"nTCPPort"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">34L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"nUnitID"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">36L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"OutputReg"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">237L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"bOutput1"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">239L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"bOutput2"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">241L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"bBusy"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">186L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"bError"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">188L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"InputReg"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">219L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"bInput1"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">205L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"bInput2"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">207L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"FB_FactoryIO_ModbusTCP"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">29L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"fb_FactoryIO_ModbusTCP"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">30L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Parameters" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <n n="PreparedParameters" />
                    <v n="PageArea">0</v>
                    <v n="Bounds">"31, 4, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="EnEno">false</v>
                    <v n="KindOfCall" t="KindOfCall">FunctionBlock</v>
                    <v n="ContainsExtensibleInputs">false</v>
                    <v n="Forced">false</v>
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">22L</v>
                  </o>
                  <o t="CFCCommentElement">
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"Call method"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">177L</v>
                    </o>
                    <v n="PageArea">0</v>
                    <v n="Bounds">"31, 15, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">176L</v>
                  </o>
                  <o t="CFCBoxElement">
                    <o n="Inputs" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <o n="Outputs" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <o n="Texts" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCText">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"FB_FactoryIO_ModbusTCP.Write_Output"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">229L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"fb_FactoryIO_ModbusTCP"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">230L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Parameters" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <n n="PreparedParameters" />
                    <v n="PageArea">0</v>
                    <v n="Bounds">"28, 16, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="EnEno">false</v>
                    <v n="KindOfCall" t="KindOfCall">Method</v>
                    <v n="ContainsExtensibleInputs">false</v>
                    <v n="Forced">false</v>
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">228L</v>
                  </o>
                  <o t="CFCBoxElement">
                    <o n="Inputs" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <o n="Outputs" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <o n="Texts" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCText">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"FB_FactoryIO_ModbusTCP.Write_OutputRegister"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">232L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"fb_FactoryIO_ModbusTCP"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">233L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Parameters" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <n n="PreparedParameters" />
                    <v n="PageArea">0</v>
                    <v n="Bounds">"48, 16, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="EnEno">false</v>
                    <v n="KindOfCall" t="KindOfCall">Method</v>
                    <v n="ContainsExtensibleInputs">false</v>
                    <v n="Forced">false</v>
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">231L</v>
                  </o>
                </l2>
              </o>
              <n n="ParameterInitializationMethodGenerator" />
              <o n="RoutingPathTable" t="CFCRoutingPathTable">
                <d2 n="InnerDictionary" ckt="CFCRoutingConnection" cvt="CFCPointList">
                  <o>
                    <v n="ConnectionId">253L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">23</v>
                      <v n="Y">11</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">false</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">23</v>
                        <v n="Y">11</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">68</v>
                      </o>
                      <o>
                        <v n="X">30</v>
                        <v n="Y">11</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">97</v>
                      </o>
                    </l2>
                  </o>
                  <o>
                    <v n="ConnectionId">249L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">24</v>
                      <v n="Y">9</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">false</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">24</v>
                        <v n="Y">9</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">68</v>
                      </o>
                      <o>
                        <v n="X">30</v>
                        <v n="Y">9</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">97</v>
                      </o>
                    </l2>
                  </o>
                  <o>
                    <v n="ConnectionId">245L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">23</v>
                      <v n="Y">10</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">false</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">23</v>
                        <v n="Y">10</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">68</v>
                      </o>
                      <o>
                        <v n="X">30</v>
                        <v n="Y">10</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">97</v>
                      </o>
                    </l2>
                  </o>
                </d2>
              </o>
              <v n="AutoSizeCanvas">true</v>
              <v n="CanvasWidth">68</v>
              <v n="CanvasHeight">20</v>
            </o>
          </Data>
          <TypeList>
            <Type n="Boolean">System.Boolean</Type>
            <Type n="CFCBoxElement">{f5becf35-b1f3-4274-b411-81d4b63a1516}</Type>
            <Type n="CFCCommentElement">{3487d131-7fd4-48ac-9e99-9e275c3b8ff8}</Type>
            <Type n="CFCConnection">{5ae2e111-ecff-4a21-b647-2d4da63f8db7}</Type>
            <Type n="CFCImplementationObject">{32d3375e-c010-41e2-9e43-b2fbf4f2b374}</Type>
            <Type n="CFCInputElement">{d51129f5-df27-4886-99d1-c564d2e2c1f6}</Type>
            <Type n="CFCInputPin">{c994f6e0-311a-4a1c-bc38-75fe34892406}</Type>
            <Type n="CFCItemList">{cd57ba20-558b-4b98-96c1-73c6000c3087}</Type>
            <Type n="CFCOutputPin">{65582d84-cf18-4ca0-be59-bf5a3d00b8f8}</Type>
            <Type n="CFCPoint">{b3e42b54-b8f2-45d3-825d-747f82f244a0}</Type>
            <Type n="CFCPointList">{584effbc-813e-443a-bf78-ad9c8d49db41}</Type>
            <Type n="CFCRoutingConnection">{93c117eb-0884-403b-b01e-28b89f47e041}</Type>
            <Type n="CFCRoutingPathTable">{4b8bcc79-5980-4868-b49e-005a8148859b}</Type>
            <Type n="CFCText">{72f2b13f-5349-4a8a-bbe6-2bccf3f42179}</Type>
            <Type n="Int32">System.Int32</Type>
            <Type n="Int64">System.Int64</Type>
            <Type n="KindOfCall">{77f43dfe-ca6a-4869-828f-7609d8ed6ea6}</Type>
            <Type n="ProcessValueAccess">{88453c7d-d652-4a27-a1b0-a1953be49a5c}</Type>
            <Type n="SetReset">{24449d48-c96a-49c4-b9d1-a4ea34aedce3}</Type>
            <Type n="SetResetRef">{233bc97c-69fe-4d29-b40e-a9a9b854044e}</Type>
            <Type n="String">System.String</Type>
          </TypeList>
        </XmlArchive>
      </CFC>
    </Implementation>
  </POU>
</TcPlcObject>